syntax = "proto3";

package org.tatrman.esotools.grpc;

option java_package = "org.tatrman.esotools.grpc";
option java_multiple_files = true;

service EsoService {
  rpc GetProductStock (ProductStockRequest) returns (ProductStockResponse);
  rpc GetOrderStatus (OrderStatusRequest) returns (OrderStatusResponse);
  rpc GetReturnStatus (ReturnStatusRequest) returns (ReturnStatusResponse);
}

message ProductStockRequest {
  string productId = 1;
}

message ProductStockResponse {
  string productId = 1;
  int32 currentStock = 2;
  string productType = 3;
  repeated RestockItem restockSchedule = 4;
}

message RestockItem {
  string date = 1; // ISO Date String
  int32 quantity = 2;
  string sourceId = 3;
  string type = 4;
}

message OrderStatusRequest {
  string orderId = 1;
  string customerId = 2; // Optional filter
}

message OrderStatusResponse {
  string orderId = 1;
  string status = 2;
  string paymentStatus = 3;
  string deliveryDate = 4;
  double totalAmount = 5;
}

message ReturnStatusRequest {
  string customerId = 1;
}

message ReturnStatusResponse {
  repeated ReturnItem returns = 1;
}

message ReturnItem {
  string returnId = 1;
  string originalOrderId = 2;
  string status = 3;
  string resolutionType = 4;
  string plannedActionDate = 5;
}
