package org.tatrman.esotools.mcp

import kotlinx.serialization.Serializable

// Placeholder for Tool definitions
// Real implementation will use the SDK's annotations or registration methods

@Serializable data class ProductStockInput(val productId: String)

@Serializable
data class OrderStatusInput(val orderId: String? = null, val customerId: String? = null)

@Serializable data class ReturnStatusInput(val customerId: String)

class Tools {
    fun productStock(input: ProductStockInput): String {
        // TODO: Call API Server via gRPC/HTTP
        return "Product stock for ${input.productId} (Placeholder)"
    }

    fun orderStatus(input: OrderStatusInput): String {
        return "Order status for ${input.orderId ?: input.customerId} (Placeholder)"
    }

    fun returnStatus(input: ReturnStatusInput): String {
        return "Return status for ${input.customerId} (Placeholder)"
    }
}
